GNOME Bugzilla – Bug 739299
--sysconfdir is not honoured
Last modified: 2018-08-16 17:56:35 UTC
I was surprised to discover that ./configure --sysconfdir=/some/other/dir has no effect - the problem was actually finding where I hid dconf/db. Before launching into an autotools patch, I see that the long comment at the beginning of dconf-engine-profile.c needs consideration. https://git.gnome.org/browse/dconf/tree/engine/dconf-engine-profile.c The search order for the profile seems to be: 1) "as defined by API" (not sure how, but nevermind) 2) DCONF_PROFILE environment variable 3) /etc/dconf/profile 4) directories listed in XDG_DATA_DIRS with dconf/profile appended I would suggest that between 2) and 3) ought to be $sysconfdir/dconf/profile My actual problem was rather with /etc/dconf/db than profiles, and /etc/dconf/db seems to be hard coded. I would suggest the same as the amended search above, possibly with a DCONF_DB variable. Thoughts?
Created attachment 297489 [details] [review] Replace all hard-coded /etc path with $(sysconfdir)
Created attachment 331631 [details] [review] Replace all hard-coded /etc path with $(sysconfdir) This is useful in JHBuild environments and systems that don't want to use /etc/dconf. Updated patch that can be applied on the current master branch.
Created attachment 365879 [details] [review] Replace all hard-coded /etc path with sysconfdir This is useful for JHBuild environments and systems that don't want to use /etc/dconf.
Since all patches I uploaded here are never reviewed, I wonder what is the plan of dconf developers for this issue. Will all generated files be moved to /var instead of /etc?
Hello, will the patch get reviewed, or is there an alternative solution being worked on? We have kept sed patch in FreeBSD ports for a long time and it is also needed in JHBuild environment.
Created attachment 373336 [details] [review] Replace all hard-coded /etc path with sysconfdir This is useful for JHBuild environments and systems that don't want to use /etc/dconf.
Created attachment 373360 [details] [review] Replace all hard-coded /etc path with sysconfdir This is useful for JHBuild environments and systems that don't want to use /etc/dconf. Fix test failure and open a merge request on GitLab: https://gitlab.gnome.org/GNOME/dconf/merge_requests/21
Attachment 373360 [details] pushed as 46574fc - Replace all hard-coded /etc path with sysconfdir The patch has been reviewed and accepted on GitLab.