Replace all hard-coded /etc path with sysconfdir

This is useful for JHBuild environments and systems that don't want
to use /etc/dconf.

https://bugzilla.gnome.org/show_bug.cgi?id=739299